# parse_and_write_tables

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
app/: data_extractor.py  data_processor.py  docx_writer.py  main.py  utils.py
parse_data/: data1.html  data2.html  data3.html
