[tool.poetry]
name = "parse-and-write-tables"
version = "0.1.0"
description = ""
authors = ["GrigoriyKruchinin <gkruchinin75@gmail.com>"]
readme = "README.md"
packages = [{include="app"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
pandas = "^2.2.2"
python-docx = "^1.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
